--- a/Workshop1/Classes/Views/Components/Category/CategoryComponent.xib
+++ b/Workshop1/Classes/Views/Components/Category/CategoryComponent.xib
@@ -12,19 +12,20 @@
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zsB-D2-9SY" customClass="CategoryComponent" customModule="Workshop1" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="90" height="85"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="I0L-Qx-5ub">
-                    <rect key="frame" x="25" y="10" width="40" height="65"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="I0L-Qx-5ub">
+                    <rect key="frame" x="12" y="10" width="66" height="65"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🍉" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ch1-z9-p9u">
-                            <rect key="frame" x="0.0" y="0.0" width="40" height="42"/>
+                            <rect key="frame" x="13" y="0.0" width="40" height="42"/>
                             <fontDescription key="fontDescription" type="system" pointSize="35"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oIi-XF-ju3" customClass="WorkshopLabel" customModule="Workshop1" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="48" width="40" height="17"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="oIi-XF-ju3" customClass="WorkshopLabel" customModule="Workshop1" customModuleProvider="target">
+                            <rect key="frame" x="15.333333333333332" y="48" width="35.333333333333343" height="17"/>
+                            <color key="backgroundColor" red="0.30790691799999997" green="0.76942896839999997" blue="0.01329676338" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -37,10 +38,11 @@
                     </subviews>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" systemColor="systemIndigoColor"/>
             <constraints>
                 <constraint firstItem="I0L-Qx-5ub" firstAttribute="centerX" secondItem="zsB-D2-9SY" secondAttribute="centerX" id="3cP-or-WdP"/>
                 <constraint firstItem="I0L-Qx-5ub" firstAttribute="centerY" secondItem="zsB-D2-9SY" secondAttribute="centerY" id="4G8-8W-itC"/>
+                <constraint firstItem="I0L-Qx-5ub" firstAttribute="leading" secondItem="zsB-D2-9SY" secondAttribute="leading" constant="12" id="x29-t6-tiS"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
@@ -51,8 +53,8 @@
         </view>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
