--- a/Workshop1/Screens/Home/Base.lproj/Main.storyboard
+++ b/Workshop1/Screens/Home/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="uCp-27-uQK">
-                                                <rect key="frame" x="12" y="12" width="369" height="205"/>
+                                                <rect key="frame" x="12" y="12" width="369" height="575"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="Lsl-4T-Gwy">
                                                         <rect key="frame" x="0.0" y="0.0" width="369" height="70"/>
@@ -76,10 +76,10 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="369" height="115"/>
                                                                 <subviews>
                                                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="bottom" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="aKq-FY-11t">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="369" height="30"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="369" height="65"/>
                                                                         <subviews>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Categories" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CVJ-an-VrP" customClass="WorkshopLabel" customModule="Workshop1" customModuleProvider="target">
-                                                                                <rect key="frame" x="0.0" y="9.6666666666666554" width="287" height="20.333333333333329"/>
+                                                                                <rect key="frame" x="0.0" y="44.666666666666657" width="287" height="20.333333333333329"/>
                                                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                                                 <nil key="textColor"/>
                                                                                 <nil key="highlightedColor"/>
@@ -90,7 +90,7 @@
                                                                                 </userDefinedRuntimeAttributes>
                                                                             </label>
                                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EG2-iS-m6P">
-                                                                                <rect key="frame" x="299" y="0.0" width="70" height="30"/>
+                                                                                <rect key="frame" x="299" y="35" width="70" height="30"/>
                                                                                 <constraints>
                                                                                     <constraint firstAttribute="height" constant="30" id="VFG-IQ-VWh"/>
                                                                                     <constraint firstAttribute="width" constant="70" id="XLx-PR-wje"/>
@@ -101,13 +101,24 @@
                                                                         </subviews>
                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     </stackView>
-                                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="u52-qB-CpP">
-                                                                        <rect key="frame" x="0.0" y="30" width="369" height="85"/>
-                                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c7s-Iy-b69">
+                                                                        <rect key="frame" x="0.0" y="65" width="369" height="50"/>
+                                                                        <subviews>
+                                                                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="u52-qB-CpP">
+                                                                                <rect key="frame" x="0.0" y="0.0" width="600" height="85"/>
+                                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                                <constraints>
+                                                                                    <constraint firstAttribute="height" constant="85" id="nwH-aw-lXg"/>
+                                                                                </constraints>
+                                                                            </stackView>
+                                                                        </subviews>
                                                                         <constraints>
-                                                                            <constraint firstAttribute="height" constant="85" id="nwH-aw-lXg"/>
+                                                                            <constraint firstAttribute="trailing" secondItem="u52-qB-CpP" secondAttribute="trailing" id="Z8p-2N-d9n"/>
+                                                                            <constraint firstAttribute="bottom" secondItem="u52-qB-CpP" secondAttribute="bottom" id="b7E-8n-n1W"/>
+                                                                            <constraint firstItem="u52-qB-CpP" firstAttribute="top" secondItem="c7s-Iy-b69" secondAttribute="top" id="ty4-EY-cA2"/>
+                                                                            <constraint firstItem="u52-qB-CpP" firstAttribute="leading" secondItem="c7s-Iy-b69" secondAttribute="leading" id="u5o-0w-PTP"/>
                                                                         </constraints>
-                                                                    </stackView>
+                                                                    </scrollView>
                                                                 </subviews>
                                                             </stackView>
                                                         </subviews>
@@ -125,6 +136,15 @@
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
+                                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dwg-c6-ltQ">
+                                                        <rect key="frame" x="0.0" y="447" width="369" height="350"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="350" id="8AB-He-EOq"/>
+                                                        </constraints>
+                                                        <connections>
+                                                            <segue destination="XWS-Yj-o85" kind="embed" id="peS-ZN-5cm"/>
+                                                        </connections>
+                                                    </containerView>
                                                 </subviews>
                                             </stackView>
                                         </subviews>
@@ -162,6 +182,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="46.564885496183201" y="3.5211267605633805"/>
+        </scene>
+        <!--RecipeCollection-->
+        <scene sceneID="wtb-y1-AFs">
+            <objects>
+                <viewControllerPlaceholder storyboardName="RecipeCollection" referencedIdentifier="RecipeCollection" id="XWS-Yj-o85" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jEy-Ew-Iyn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="966" y="-109"/>
         </scene>
     </scenes>
     <resources>
